--- a/src/Poker.css
+++ b/src/Poker.css
@@ -45,20 +45,6 @@ img {
 	height: auto;
 }
 
-/*
-.player-avatar-container {
-	position: relative;
-
-	height: 100px;
-	width: 100px;
-	border-radius: 100px;
-}
-
-
-
-
-*/
-
 /* Playing Card Styles */
 
 .playing-card {
@@ -177,13 +163,7 @@ img {
  	align-items: center;
  	flex-direction: column;
 
-	/* 
- 	width: 175px;
- 	height: 200px;
-	
-	 border-radius: 200px;
-	 */
- }
+}
 
  .p0 {
  	bottom: 8.262%; /* 41px/962px */ /* ADD 2PX TO ALL VETICAL CALCULATIONS - MOVED PLAYERBOARD UP FOR CARD SPACE  (WAS 4.262%)*/
@@ -361,25 +341,6 @@ img {
 	color: white;
 }
 
-/*
-.table-test {
-	position: absolute;
-	top: 20px;
-	left: 50%;
-	transform: translateX(-50%);
-	width: 765px;
-	height: auto;
-	z-index: 500;
-}
-
-
-@media screen and (orientation: portrait) {
-	.poker-players {
-		transform: rotate(90deg);
-	}
-}
-*/
-
 .player-entity--container {
 	display: flex;
 	height: auto;
@@ -410,19 +371,20 @@ img {
 	transform: translateX(-50%);
 	width: 100%;
 	color: whitesmoke;
-	background-color: rgba(0,0,0,0.86);
+	background-color: rgba(0, 0, 0, 0.86);
 	font-size: 12px;
 }
 
 .player-avatar--image {
 	border-radius: 500px;
 	border: 1px solid whitesmoke;
-	background-color: rgba(176, 14, 14, 0.22);
+	background-color: rgba(206, 18, 18, 0.473);
 	transition: border 0.1s ease-out;
 }
 
 .activePlayer {
 	border: 2px solid #00ff25;
+	border-width: 5px;
 }
 
 .player-info--wrapper {
@@ -451,7 +413,8 @@ img {
 	position: relative;
 	width: 100%;
 	height: 100%;
-	background-image: radial-gradient(#8B0000 60%, #6A0000 82%);
+	/* background-image: radial-gradient(#8B0000 60%, #6A0000 82%); */
+	background-image: radial-gradient(#808080 60%, #5c5c5c 82%);
 }
 
 .poker-table--container {
@@ -627,20 +590,13 @@ img {
 		transform: rotate(90deg);
 	}
 }
-/*
-@media (min-width: 1280px) {
-	.poker-table--container {
-		position: absolute;
-		left: 50%;
-		transform: translateX(-50%);
-		width: 1280px;
-		height: auto;
-	}
-	
-	.poker-table--table-image {
-		width: 100%;
-		height: 100%;
-	}	
-}
 
-*/
+.music-player {
+	/* position: absolute;
+	bottom: 0;
+	width: 100%;
+	background-color: rgba(0, 0, 0, 0.85);
+	color: white;
+	text-align: center;
+	padding: 10px; */
+}
